# sysid_litreview_26

./: .gitignore  README.md  ROADMAP.md  comparison_suite.py  pyproject.toml  results.py  run.py  setup_env.sh
benchmark/: export.py  method_api.py  paths.py  registry.py  scenarios.py
common/: dataset.py  paths.py
data/: README.md
dataset_tools/: registry.py  validate_dataset.py  validate_format.py
datasets/: __init__.py  fetch.py
docs/: BENCHMARK.md  CONTRIBUTING_METHODS.md  DATASET_CONTRACT.md  METHOD_ROADMAP.md  SELF_HOSTED_GPU.md
latex/: .gitignore  main.tex  paper.py  ref.bib
methods/: METHOD_ROADMAP.md  README.md  compare.py  comparison_suite.py  observation_rate_study.py  requirements.txt  run.py  setup_env.sh
models/: __init__.py
results/: aggressive_safe_shared_frequency_summary.csv  aggressive_shared_frequency_summary.csv  aircraft6dof_benchmark_manifest.json  aircraft6dof_method_comparison.csv  aircraft_6dof_aggressive_method_traces.json  aircraft_6dof_open_loop_method_traces.json  aircraft_6dof_sine_sweep_method_traces.json  aircraft_6dof_trim_grid_method_traces.json  benchmark_maneuver_summary.csv  direct_nn_coeff_surrogate_loss.csv  direct_pinn_coeff_closure_loss.csv  metadata.json  mocap_pinn_hidden_elevator_loss.csv  mocap_ude_residual_loss.csv  nn_coeff_surrogate_loss.csv  observation_rate_study.csv  oem_fit_summary.csv  open_loop_shared_method_traces.json  pinn_coeff_closure_loss.csv  pinn_fit_summary.csv  proprietary_autopilot_shared_sindy_coefficients.csv  proprietary_autopilot_shared_symbolic_coefficients.csv  sindy_fit_summary.csv  (+3 more)
(+144 files in other folders)
